--- a/GameUI/GameUI.vcxproj.filters
+++ b/GameUI/GameUI.vcxproj.filters
@@ -52,4 +52,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gameExample.pack" />
+  </ItemGroup>
 </Project>
