--- a/GameUI/GameUI.vcxproj
+++ b/GameUI/GameUI.vcxproj
@@ -174,6 +174,7 @@
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\ash.pack" />
     <None Include="Resources\gameExample.pack">
       <DeploymentContent>true</DeploymentContent>
     </None>
