--- a/GameUI/GameUI.vcxproj.filters
+++ b/GameUI/GameUI.vcxproj.filters
@@ -54,5 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\gameExample.pack" />
+    <None Include="Resources\ash.pack" />
   </ItemGroup>
 </Project>
