--- a/OnlineRPGGame/OnlineRPGGame.vcxproj.filters
+++ b/OnlineRPGGame/OnlineRPGGame.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="HeroCharacter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HeroController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HeroCharacter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HeroController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
