--- a/OnlineRPGGame/OnlineRPGGame.vcxproj
+++ b/OnlineRPGGame/OnlineRPGGame.vcxproj
@@ -133,11 +133,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HeroCharacter.h" />
+    <ClInclude Include="HeroController.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HeroCharacter.cpp" />
+    <ClCompile Include="HeroController.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
