--- a/OnlineRPGGame/OnlineRPGGame.vcxproj.filters
+++ b/OnlineRPGGame/OnlineRPGGame.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="HeroController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OnlineRpg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HeroController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OnlineRpg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
