+Added callback for physics +Added trigger behaviour for bodies

--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -275,6 +275,9 @@
     <ClInclude Include="Include\PhysicsDebugRenderPass.h">
       <Filter>Engine\Graphics\RenderPasses</Filter>
     </ClInclude>
+    <ClInclude Include="Include\SimpleContactInfo.h">
+      <Filter>Engine\Physics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\SimpleObjectsRenderPass.cpp">
