--- a/SimpleEngine/SimpleEngine.vcxproj
+++ b/SimpleEngine/SimpleEngine.vcxproj
@@ -212,6 +212,7 @@ copy /Y "$(ProjectDir)\External\mygui\runtime\MyGUIEngine_d.dll" "$(TargetDir)"<
     <ClInclude Include="Include\PhysicsDebugRenderPass.h" />
     <ClInclude Include="Include\SimpleAnimatedEntity.h" />
     <ClInclude Include="Include\SimpleAnimator.h" />
+    <ClInclude Include="Include\SimpleContactInfo.h" />
     <ClInclude Include="Include\SimpleController.h" />
     <ClInclude Include="Include\SimpleCharacter.h" />
     <ClInclude Include="Include\SimpleFixedObject.h" />
