--- a/OnlineRPGGame/OnlineRPGGame.vcxproj
+++ b/OnlineRPGGame/OnlineRPGGame.vcxproj
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)SimpleEngine\External\box2d\include;$(SolutionDir)\SimpleEngine\External\glm\;$(SolutionDir)\SimpleEngine\External\ois\include\;..\SimpleEngine\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)SimpleEngine\External\raknet\include;$(SolutionDir)SimpleEngine\External\box2d\include;$(SolutionDir)\SimpleEngine\External\glm\;$(SolutionDir)\SimpleEngine\External\ois\include\;..\SimpleEngine\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
