+Added minimal rpc functionality to send events across the network

--- a/OnlineRPGGame/OnlineRPGGame.vcxproj
+++ b/OnlineRPGGame/OnlineRPGGame.vcxproj
@@ -79,6 +79,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>SIMPLE_DLL;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <DisableSpecificWarnings>4251;4275</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
